Add react-bootstrap and redesign todo list footer touse bootstrap button

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="pl">
     <head>
         <meta charset="utf-8" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     </head>
 
     <body>
